--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 	<head>
+		 <body style="background-color:black;">
 		<meta charset="utf-8">
 		<title>Title</title>
 		<link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
@@ -8,14 +9,15 @@
 	</head>
 	<body>
 		<header>
-			<h1>Replace this with something interesting...</h1>
+			<h1>Asteriods Game</h1>
 		</header>
 			<section id="content">
 				<canvas id="AsteroidsGame" data-processing-sources="AsteroidsGame/AsteroidsGame.pde AsteroidsGame/Mover.pde AsteroidsGame/Spaceship.pde AsteroidsGame/Star.pde ">
 				</canvas>
 		    </section>
 	    <footer>
-		    Footer - replace with a helpful message on how to play your game.
+		    Use the 'WASD' keys to fly around space and shoot asteriods!
+		    Just don't let them touch you!
 	    </footer>
 	</body>
 </html>
