--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 	<head>
-		 <body style="background-color:black;">
+		 <body style="background-color:white;">
 		<meta charset="utf-8">
 		<title>Title</title>
 		<link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
