--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			<h1>Asteriods Game</h1>
 		</header>
 			<section id="content">
-				<canvas id="AsteroidsGame" data-processing-sources="AsteroidsGame/AsteroidsGame.pde AsteroidsGame/Mover.pde AsteroidsGame/Spaceship.pde AsteroidsGame/Star.pde ">
+				<canvas id="AsteroidsGame" data-processing-sources="AsteroidsGame/AsteroidsGame.pde AsteroidsGame/Mover.pde AsteroidsGame/Spaceship.pde AsteroidsGame/Star.pde AsteriodsGame/Bullet.pde AsteriodsGame/Asteriods.pde ">
 				</canvas>
 		    </section>
 	    <footer>
